logs/Slang/chapter-9/9.4.3--event_sequence_controls.sv.log
name: event_sequence_controls
description: event sequence
should_fail: 0
tags: 9.4.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.3--event_sequence_controls.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.3--event_sequence_controls.sv:17:3: error: language feature not yet supported
		wait (enable) #10 a = b;
		^~~~~~~~~~~~~~~~~~~~~~~~
